Fixed blurry logo on safari

--- a/css/styles-v2.css
+++ b/css/styles-v2.css
@@ -216,3 +216,16 @@ footer .fa-inverse {
         font-size: 24px;
     }
 }
+
+/* @media only screen and (min-width: 1170px) */
+.navbar-custom {
+    position: fixed;
+    -webkit-transition: none;
+    -moz-transition: none;
+    transition: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+    transform: none;
+}
